# phonikud-chatterbox

./: .gitignore  README.md  pyproject.toml
examples/: simple.py
src/phonikud_chatterbox/: __init__.py
